adaptation for components aboutProducts, purposesAndMission, aboutCommunity, ourPlans

--- a/src/pages/components/pageAboutProducts/aboutCommunity.html
+++ b/src/pages/components/pageAboutProducts/aboutCommunity.html
@@ -1,9 +1,11 @@
 <section class="about-block wrapper">
     <h2 class="heading about-block__heading about-block__heading_about-community">О комьюнити</h2>
     <div class="about-block__block about-block__block-reverse">
-        <img src="./images/about-community.png" alt="project-founders-network" class="about-block__images">
-        <div class="about-block____right">
-            <p class="description about-block__description">Мы создаём комьюнити, где каждый участник не только получает актуальные знания в выбранной области, но и становится частью большой команды, которая нацелена на получение максимальной пользы от участия в проекте. Ещё каждый участник может выбрать любой метод обучения. И, вдобавок, участник сможет стать полноценным специалистом и участником команды Development Corporation</p>
+        <div class="about-block__left">
+            <img src="./images/about-community.png" alt="project-founders-network" class="about-block__images">
+        </div>
+        <div class="about-block__right">
+            <p class="description about-block__description about-block__description_text">Проект Development Corporation является экосистемой, целью которой является сделать знания доступными для всех, продвинуть идею престижного образа жизни через идею усовершенствования человека в физическом, ментальном и финансовом плане. Экосистема предоставляет человеку возможность  обучения в любом виде и форме, которую выбрал он сам. Мы разрабатываем IT продукты, которые будут обучать и развивать и давать опыт вам в выбранной вами области. С продуктами, которые мы разрабатываем на данный момент, можно ознакомиться во вкладке “Продукты”.</p>
         </div>
     </div>
 </section>
