--- a/src/styles/components/commonСomponents/aboutBlock.css
+++ b/src/styles/components/commonСomponents/aboutBlock.css
@@ -95,6 +95,9 @@
     .about-block__right {
         flex: 1;
         margin-left: -190px;
+        background-color: rgba(0, 0, 0, 0.174);
+        padding: 10px 5px;
+        border-radius: 10px;
     }
 
     .about-block__block-reverse .about-block__right {
