adaptation for components tiktok, instagram, telegram

--- a/src/pages/components/pageSocilNetwork/instagram.html
+++ b/src/pages/components/pageSocilNetwork/instagram.html
@@ -1,8 +1,10 @@
 <section class="about-block wrapper">
     <h2 class="heading about-block__heading about-block__heading_our-plans"></h2>
     <div class="about-block__block about-block__block-reverse">
-        <img src="./images/instagram.png" alt="project-founders-network" class="about-block__images">
-        <div class="about-block____right">
+        <div class="about-block__left">
+            <img src="./images/instagram.png" alt="project-founders-network" class="about-block__images">
+        </div>
+        <div class="about-block__right">
             <h6 class="about-block__title">Instagram</h6>
             <p class="description about-block__description">Людям всегда интересно следить за тем, как кто-то делает что-то невероятно классное. Поэтому в формате блога нашего идейного основателя мы рассказываем про то, какие проблемы встречаются на пути разработки проекта, как мы преодолеваем личностные испытания, да и в конце концов делимся своей жизнью и мировоззрением. Подписывайтесь и будьте вкурсе всех событий.</p>
         </div>
