--- a/src/pages/components/pageSocilNetwork/tiktok.html
+++ b/src/pages/components/pageSocilNetwork/tiktok.html
@@ -1,8 +1,10 @@
 <section class="about-block wrapper">
     <h2 class="heading about-block__heading_center">Социальные сети</h2>
-        <div class="about-block__block">
-        <img src="./images/tiktok.png" alt="project-founders-network" class="about-block__images">
-        <div class="about-block____right">
+    <div class="about-block__block">
+        <div class="about-block__left">
+            <img src="./images/tiktok.png" alt="project-founders-network" class="about-block__images">
+        </div>
+        <div class="about-block__right">
             <h6 class="about-block__title">TikTok</h6>
             <p class="description about-block__description">В наше время очень многие люди проводят время в тиктоке. В большинстве своём тикток наполнен развлекательным контентом. Поэтому на нашем аккаунте мы рассказываем про финансы и новости в развлекательной форме. Там вы сможете узнать про то, почему корпорации поднимают цены на продукт, как работает сложный процент, какая тенденция была у стоимости Биткоина и многое другое. Подписывайтесь и разбавляйте свою ленту полезным и интересным контентом!</p>
         </div>
