modified component swiper-founders

--- a/src/styles/components/pageFounders/swiperFounders.css
+++ b/src/styles/components/pageFounders/swiperFounders.css
@@ -1,6 +1,8 @@
 .swiper-founders {
     padding-top: var(--p-tb-section);
     padding-bottom: var(--p-tb-section);
+    overflow-x: hidden;
+    cursor: no-drop;
 }
 
 .swiper-founders__items {
