--- a/src/pages/components/pageHome/project.html
+++ b/src/pages/components/pageHome/project.html
@@ -6,7 +6,7 @@
         </div>
         <div class="about-block__right">
             <p class="description about-block__description">Интернациональная команда, в которой находятся люди из США, Польши, России, Беларуси, Украины, Германии, Приднестровья, работает над общей целью- сделать знания доступными для всех, продвинуть идею престижного образа жизни через идею усовершенствования человека в физическом, ментальном, финансовом плане. И всё это происходит в рамках нашей экосистемы "Development_corporation", под эгидой которой будет выпущено множество продуктов.</p>
-            <a class="about-block__link" href="./products.html">Подробнее о проекте</a>
+            <a class="about-block__link" href="./about-project.html">Подробнее о проекте</a>
         </div>
     </div>
 </section>
