modified project for mobail

--- a/src/pages/components/pageHome/projectsCompany.html
+++ b/src/pages/components/pageHome/projectsCompany.html
@@ -12,28 +12,28 @@
         <div class="projects-company__circle projects-company__circle_inactive">
             DevAR
             <span class="projects-company__tooltip">
-                <h6 class="projects-company__tooltip-heading">DevAR</h6>
-                <p class="projects-company__tooltip-description">soon</p>
+                <h6 class="projects-company__tooltip-heading">DevAR <span>(soon)</span></h6>
+                <p class="projects-company__tooltip-description">...</p>
             </span>
         </div>
         <div class="projects-company__circle projects-company__circle_inactive">
             DevApp
             <span class="projects-company__tooltip">
-                <h6 class="projects-company__tooltip-heading">DevApp</h6>
+                <h6 class="projects-company__tooltip-heading">DevApp <span>(soon)</span></h6>
                 <p class="projects-company__tooltip-description">«DevCorp APP» – Новое инновационное приложение в сфере обучения. В приложении можно получить знания в сферах it-сектора, знания по digital-профессиям, знания в сфере инвестирования и etc. Обучение разбито на блоки, а блоки на подблоки, можно обучиться, проходя разные мини-игры и другие "плюшки". В приложении будет хорошо развита экономика, можно будет получить white листы на остальные продукты экосистемы.</p>
             </span>
         </div>
         <div class="projects-company__circle projects-company__circle_inactive">
             DevLVL
             <span class="projects-company__tooltip">
-                <h6 class="projects-company__tooltip-heading">DevLVL</h6>
-                <p class="projects-company__tooltip-description">soon</p>
+                <h6 class="projects-company__tooltip-heading">DevLVL <span>(soon)</span></h6>
+                <p class="projects-company__tooltip-description">...</p>
             </span>
         </div>
         <div class="projects-company__circle projects-company__circle_inactive">
             DevBIs
             <span class="projects-company__tooltip">
-                <h6 class="projects-company__tooltip-heading">DevBIs</h6>
+                <h6 class="projects-company__tooltip-heading">DevBIs <span>(soon)</span></h6>
                 <p class="projects-company__tooltip-description">«DevBLS» – Новая современная интернет-платформа для предпринимателей и бизнесменов. На платформе будет развитая система сообщества, новостные сводки про бизнес и т.п. И самое главное- возможность начать зарабатывать путём связи пользователя с платформой разными путями.</p>
             </span>
         </div>
