--- a/src/pages/components/pageSocilNetwork/tiktok.html
+++ b/src/pages/components/pageSocilNetwork/tiktok.html
@@ -2,7 +2,7 @@
     <h2 class="heading about-block__heading_center">Социальные сети</h2>
     <div class="about-block__block">
         <div class="about-block__left">
-            <img src="./images/tiktok.png" alt="project-founders-network" class="about-block__images">
+            <img src="./images/tiktok.png" alt="project-founders-network" class="about-block__images about-block__images_icon">
         </div>
         <div class="about-block__right">
             <h6 class="about-block__title">TikTok</h6>
