--- a/src/pages/components/pageSocilNetwork/instagram.html
+++ b/src/pages/components/pageSocilNetwork/instagram.html
@@ -1,8 +1,8 @@
 <section class="about-block wrapper">
     <h2 class="heading about-block__heading about-block__heading_our-plans"></h2>
     <div class="about-block__block about-block__block-reverse">
-        <div class="about-block__left">
-            <img src="./images/instagram.png" alt="project-founders-network" class="about-block__images">
+        <div class="about-block__left about-block__left_right">
+            <img src="./images/instagram.png" alt="project-founders-network" class="about-block__images about-block__images_icon">
         </div>
         <div class="about-block__right">
             <h6 class="about-block__title">Instagram</h6>
