--- a/src/styles/components/pageHome/home.css
+++ b/src/styles/components/pageHome/home.css
@@ -2,6 +2,7 @@
     text-align: center;
     padding-top: 235px;
     padding-bottom: 240px;
+    height: calc(100vh - 130px);
 }
 
 .home__heading {
