--- a/src/styles/components/pageHome/opportunities.css
+++ b/src/styles/components/pageHome/opportunities.css
@@ -26,7 +26,7 @@
     padding-left: 25px;
     padding-right: 25px;
     padding-bottom: 25px;
-    width: 380px;
+    width: 321px;
     background: linear-gradient(
         145.6deg,
         rgba(130, 130, 207, 0.7) -19.97%,
@@ -49,7 +49,7 @@
     font-size: 36px;
     line-height: 44px;
     color: var(--text-color);
-    margin-top: 43px;
+    margin-top: 24px;
 }
 
 .opportunities__descriptions {
@@ -60,17 +60,14 @@
     margin-top: 10px;
 }
 
-@media(max-width: 1560px) {
-    .opportunities__list {
-        display: flex;
-        justify-content: space-between;
-        gap: 10px;
-    }
-}
 
 @media (max-width: 1280px) {
     .opportunities__heading::after {
         left: -428px;
+    }
+
+    .opportunities__list {
+        gap: 60px;
     }
 }
 
@@ -88,6 +85,7 @@
 
     .opportunities__item {
         display: flex;
+        align-items: center;
         padding-top: 30px;
         max-width: 550px;
         width: 100%;
