--- a/src/styles/components/pageHome/projectsCompany.css
+++ b/src/styles/components/pageHome/projectsCompany.css
@@ -140,6 +140,10 @@
     text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.projects-company__tooltip-heading > span {
+    font-size: 15px;
+}
+
 .projects-company__tooltip-description {
     font-weight: 300;
     font-size: 20px;
